# SlenderNodes

ieda/: README.md  config.py  ieda_adapter.py  install_logrotate.sh  logrotate.conf  requirements.txt  schema_org.py  usap_adapter.py  usap_config.py
oaipmh/figshare/: README.md  list_records.py  oai-pmh_adapter_figshare.py  pyproject.toml
schema_org_indexing/examples/: README.md  eg_bcodmo_01-hacked.jsonld  eg_bcodmo_01.jsonld  eg_bcodmo_02.jsonld  eg_dryad_01.jsonld  eg_dryad_02.jsonld  eg_earthchem_01.jsonld  eg_hydroshare_01.jsonld  eg_pangaea_01.jsonld
