[tool.poetry]
name = "figshare"
version = "0.1.0"
description = "OAI-PMH DataONE slender node adapter for figshare."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
PyYAML = "^6.0"
"dataone.common" = "^3.5.0"
"dataone.libclient" = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
